--- a/20210423-bootstrap-practice template.html
+++ b/20210423-bootstrap-practice template.html
@@ -45,12 +45,12 @@
             width: 100%;
         }
 
-        footer .container .footer-up {
+        /* footer .container .footer-up {
             padding: 96px 20px;
-        }
+        } */
 
         footer .footer-down {
-            padding: 16px 20px;
+            /* padding: 16px 20px; */
             background-color: rgb(243, 244, 246);
         }
 
@@ -64,20 +64,20 @@
             font-size: 14px;
         }
 
-        footer .container .footer-up .col-12 {
-            /* padding-left: 80px; */
+        /* footer .container .footer-up .col-12 {
+            padding-left: 80px;
             text-align: center;
-        }
+        } */
 
     
 
-        footer .container .footer-up .col-md-10{
+        /* footer .container .footer-up .col-md-10{
             margin-top: 40px;
-        }
+        } */
 
         footer .container .footer-up .col-12 h2 {
             font-size: 14px;
-            margin-bottom: 12px;
+            /* margin-bottom: 12px; */
         }
 
 
@@ -188,7 +188,7 @@
                                 <li>Fourth Link</li>
                             </ul>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                        <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
                             <ul>
                                 <li>First Link</li>
@@ -197,7 +197,7 @@
                                 <li>Fourth Link</li>
                             </ul>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                        <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
                             <ul>
                                 <li>First Link</li>
@@ -206,7 +206,7 @@
                                 <li>Fourth Link</li>
                             </ul>
                         </div>
-                        <div class="col-md-6 col-lg-3">
+                        <div class="text-center text-md-left col-md-6 col-lg-3">
                             <h2>CATEGORIES</h2>
                             <ul>
                                 <li>First Link</li>
