--- a/20210426-bootstrap-digipack-index.html
+++ b/20210426-bootstrap-digipack-index.html
@@ -162,18 +162,10 @@
             height: 4px;
             background-color: blue;
 
-
             position: absolute;
-           top: 45px;
+            top: 45px;
             left: 0;
-
         }
-
-
-
-
-
-
 
         main .section-4 .row .card {
             background-color: rgb(243, 244, 246);
@@ -193,6 +185,64 @@
             color: rgb(220, 174, 241);
         }
 
+        main .section-5 {
+            padding: 96px 20px;
+
+        }
+
+
+        .section-5 .row {
+            padding-bottom: 40px;
+            margin: 0 20% 40px 20%;
+
+        }
+
+        .section-5 .rounded-circle {
+            width: 128px;
+            height: 128px;
+            background-color: rgb(224, 231, 255);
+            /* margin-right: 30px; */
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .section-5 svg {
+            width: 64px;
+            height: 64px;
+            color: rgb(99, 102, 241);
+        }
+
+        .section-5 .row h2 {
+            font-size: 18px;
+        }
+
+        .section-5 .row p {
+            font-size: 16px;
+        }
+
+        .section-5 .button {
+            width: 100%;
+        }
+
+        .section-5 button {
+            background-color: rgb(99, 102, 241);
+            width: 120px;
+            height: 45px;
+            font-size: 18px;
+
+        }
+
+        main .section-6 {
+            padding: 96px 20px;
+
+        }
+
+
+
+
+
 
         @media (max-width: 992px) {
 
@@ -211,6 +261,21 @@
                 width: 100%;
             }
 
+            .section-5 .row {
+                margin: 0 0 40px 0;
+            }
+
+            .section-6 img{
+                width: 100%;
+                height: 256px;
+            }
+
+
+
+
+
+
+
         }
 
 
@@ -223,7 +288,7 @@
             }
 
             main .container {
-                max-width: 85%;
+                max-width: 100%;
 
             }
 
@@ -240,6 +305,44 @@
             main .section-3 h1 {
                 font-size: 30px;
             }
+
+            .section-5 .row {
+                margin: 0;
+                margin-bottom: 40px;
+            }
+
+            .section-5 .col-12 h2 {
+                text-align: center;
+            }
+
+            .section-5 .col-12 p {
+                text-align: center;
+            }
+
+            .section-5 .col-12 a {
+                display: flex;
+                justify-content: center;
+            }
+
+            .section-5 .rounded-circle {
+                width: 80px;
+                height: 80px;
+
+            }
+
+            .section-5 svg {
+                width: 40px;
+                height: 40px;
+            }
+
+            .section-5 .col-12.col-md-9 {
+                margin-top: 24px;
+            }
+
+
+
+
+
         }
 
         @media (max-width: 576px) {
@@ -507,9 +610,8 @@
 
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-xl-3 p-3">
-                        <div class="card p-4"> 
-                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4"
-                                alt="...">
+                        <div class="card p-4">
+                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4" alt="...">
                             <div class="card-body p-0">
                                 <p class="card-text m-0"><small class="text-muted">SUBTITLE</small></p>
                                 <h5 class="card-title">Chichen Itza</h5>
@@ -520,9 +622,8 @@
 
                     </div>
                     <div class="col-sm-12 col-md-6 col-xl-3 p-3">
-                        <div class="card p-4"> 
-                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4"
-                                alt="...">
+                        <div class="card p-4">
+                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4" alt="...">
                             <div class="card-body p-0">
                                 <p class="card-text m-0"><small class="text-muted">SUBTITLE</small></p>
                                 <h5 class="card-title">Chichen Itza</h5>
@@ -533,9 +634,8 @@
 
                     </div>
                     <div class="col-sm-12 col-md-6 col-xl-3 p-3">
-                        <div class="card p-4"> 
-                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4"
-                                alt="...">
+                        <div class="card p-4">
+                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4" alt="...">
                             <div class="card-body p-0">
                                 <p class="card-text m-0"><small class="text-muted">SUBTITLE</small></p>
                                 <h5 class="card-title">Chichen Itza</h5>
@@ -546,9 +646,8 @@
 
                     </div>
                     <div class="col-sm-12 col-md-6 col-xl-3 p-3">
-                        <div class="card p-4"> 
-                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4"
-                                alt="...">
+                        <div class="card p-4">
+                            <img src="https://dummyimage.com/720x400" class="card-img-top mb-4" alt="...">
                             <div class="card-body p-0">
                                 <p class="card-text m-0"><small class="text-muted">SUBTITLE</small></p>
                                 <h5 class="card-title">Chichen Itza</h5>
@@ -560,6 +659,122 @@
                     </div>
 
                 </div>
+            </div>
+
+            <div class="section-5">
+                <div class="row no-gutters">
+                    <div class="col-12 d-flex justify-content-center col-md-3 justify-content-md-start">
+                        <div class="rounded-circle"> <svg fill="none" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+                                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+                            </svg></div>
+                    </div>
+
+                    <div class="col-12 col-md-9">
+                        <h2>Shooting Stars</h2>
+                        <p>Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy.
+                            Gastropub indxgo
+                            juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
+                        <a href="">Learn More<i class="fas fa-arrow-right ml-2 mt-1"></i></a>
+                    </div>
+                </div>
+                <hr>
+                <div class="row no-gutters">
+                    <div class="col-12 d-flex justify-content-center col-md-3 order-md-2 justify-content-md-end">
+                        <div class="rounded-circle"> <svg fill="none" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+                                <circle cx="6" cy="6" r="3"></circle>
+                                <circle cx="6" cy="18" r="3"></circle>
+                                <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
+                            </svg></div>
+                    </div>
+                    <div class="col-12 col-md-9 order-md-1">
+                        <h2>Shooting Stars</h2>
+                        <p>Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy.
+                            Gastropub indxgo
+                            juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
+                        <a href="">Learn More<i class="fas fa-arrow-right ml-2 mt-1"></i></a>
+                    </div>
+                </div>
+                <hr>
+                <div class="row no-gutters">
+                    <div class="col-12 d-flex justify-content-center col-md-3 justify-content-md-start">
+                        <div class="rounded-circle"> <svg fill="none" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+                                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+                                <circle cx="12" cy="7" r="4"></circle>
+                            </svg></div>
+                    </div>
+                    <div class="col-12 col-md-9">
+                        <h2>Shooting Stars</h2>
+                        <p>Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy.
+                            Gastropub indxgo
+                            juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
+                        <a href="">Learn More<i class="fas fa-arrow-right ml-2 mt-1"></i></a>
+                    </div>
+
+                </div>
+
+                <div class="button d-flex justify-content-center"> <button type="button"
+                        class="btn btn-primary mt-0">Button</button></div>
+
+            </div>
+
+            <div class="section-6">
+
+                <div class="row">
+                    <div class="col-12">
+                        <img src="https://dummyimage.com/400x400" alt="">
+                    </div>
+                    <div class="col-12">
+                        <h2>BRAND NAME</h2>
+                        <h1>The Catcher in the Rye</h1>
+                        <div class="row">
+                            <div class="col-6">
+                                <span>4 Reviews</span>
+                            </div>
+                            <div class="col-6">
+                                <a href=""></a>
+                                <a href=""></a>
+                                <a href=""></a>
+                            </div>
+
+                        </div>
+                        <p>Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
+                        <div class="row">
+                            <div class="color">
+                                <span>Color</span>
+                                <button class="border-2 border-gray-300 rounded-full w-6 h-6 focus:outline-none"></button>
+                                <button></button>
+                                <button></button>
+                            </div>
+                            <div class="size">
+                                <span>Size</span>
+                                <div class="size-select">
+                                    <select class="">
+                                        <option>SM</option>
+                                        <option>M</option>
+                                        <option>L</option>
+                                        <option>XL</option>
+                                      </select>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="price">
+                            <span></span>
+                            <button></button>
+                            <!-- <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                                <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z">
+                                </path>
+                              </svg> -->
+                        </div>
+
+
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
