--- a/20210426-bootstrap-digipack-index.html
+++ b/20210426-bootstrap-digipack-index.html
@@ -234,10 +234,15 @@
 
         }
 
-        main .section-6 {
+        main .section-6 .row{
             padding: 96px 20px;
 
         }
+
+        .section-6 img {
+              width: 100%;
+            }
+
 
 
 
@@ -265,10 +270,17 @@
                 margin: 0 0 40px 0;
             }
 
-            .section-6 img{
+            .section-6 .container{
+                max-width: 80%;
+
+            }
+
+            .section-6 img {
                 width: 100%;
                 height: 256px;
             }
+
+            
 
 
 
@@ -720,16 +732,21 @@
 
             </div>
 
-            <div class="section-6">
 
-                <div class="row">
-                    <div class="col-12">
+
+        </div>
+
+
+        <div class="section-6">
+            <div class="container">
+                <div class="row mx-lg-5">
+                    <div class="col-12 col-lg-6">
                         <img src="https://dummyimage.com/400x400" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-lg-6">
                         <h2>BRAND NAME</h2>
                         <h1>The Catcher in the Rye</h1>
-                        <div class="row">
+                        <div class="row p-0">
                             <div class="col-6">
                                 <span>4 Reviews</span>
                             </div>
@@ -740,11 +757,15 @@
                             </div>
 
                         </div>
-                        <p>Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
-                        <div class="row">
+                        <p>Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia
+                            microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn.
+                            Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over,
+                            neutra jean shorts keytar banjo tattooed umami cardigan.</p>
+                        <div class="row p-0">
                             <div class="color">
                                 <span>Color</span>
-                                <button class="border-2 border-gray-300 rounded-full w-6 h-6 focus:outline-none"></button>
+                                <button
+                                    class="border-2 border-gray-300 rounded-full w-6 h-6 focus:outline-none"></button>
                                 <button></button>
                                 <button></button>
                             </div>
@@ -756,7 +777,7 @@
                                         <option>M</option>
                                         <option>L</option>
                                         <option>XL</option>
-                                      </select>
+                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -765,19 +786,22 @@
                             <span></span>
                             <button></button>
                             <!-- <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z">
-                                </path>
-                              </svg> -->
+                            <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z">
+                            </path>
+                          </svg> -->
                         </div>
-
-
                     </div>
                 </div>
-
-
             </div>
-
         </div>
+
+
+
+
+
+
+
+
     </main>
 
 
