--- a/20210426-bootstrap-digipack-index.html
+++ b/20210426-bootstrap-digipack-index.html
@@ -234,14 +234,92 @@
 
         }
 
-        main .section-6 .row{
+        main .section-6 .row {
             padding: 96px 20px;
 
         }
 
         .section-6 img {
-              width: 100%;
-            }
+            width: 100%;
+        }
+
+        .section-6 h2 {
+            font-size: 14px;
+            font-weight: 100;
+        }
+
+        .section-6 h1 {
+            font-size: 30px;
+            font-weight: 400;
+        }
+
+        .section-6 svg.star {
+            width: 16px;
+            height: 16px;
+            color: rgb(99, 102, 241);
+        }
+
+        .section-6 .review span {
+            font-size: 16px;
+            margin-left: 12px;
+            position: relative;
+        }
+
+        .section-6 .review span::after {
+            content: "";
+            width: 1px;
+            height: 28px;
+            background-color: gray;
+            position: absolute;
+            top: 0;
+            left: 85px;
+
+        }
+
+        .section-6 a svg {
+            width: 20px;
+            height: 20px;
+            color: rgb(117, 125, 143);
+        }
+
+        .section-6 .review a .facebook {
+            margin-left: 30px;
+        }
+
+
+        .section-6 .btn-group .btn{
+            width: 28px;
+            height: 28px;
+            margin: 0 4px;
+            border: 2px solid #e5e7eb;
+        }
+
+        .section-6 .btn-group .btn.white{
+           background-color: white;
+        }
+        .section-6 .btn-group .btn.black{
+           background-color: black;
+        }
+        .section-6 .btn-group .btn.blue{
+           background-color: rgb(99,102,241);
+        }
+
+        .section-6 .size .size-select option{
+            display: flex;
+            justify-content: center;
+        }
+
+
+        .section-6 .price span{
+            font-size: 24px;
+        }
+
+        .section-6 .price .btn-group .button button{
+            border-radius: 5px;
+            margin: 0;
+        } 
+
+
 
 
 
@@ -270,7 +348,7 @@
                 margin: 0 0 40px 0;
             }
 
-            .section-6 .container{
+            .section-6 .container {
                 max-width: 80%;
 
             }
@@ -280,7 +358,7 @@
                 height: 256px;
             }
 
-            
+
 
 
 
@@ -731,48 +809,107 @@
                         class="btn btn-primary mt-0">Button</button></div>
 
             </div>
-
-
-
         </div>
-
 
         <div class="section-6">
             <div class="container">
-                <div class="row mx-lg-5">
+                <div class="row mx-lg-5 no-gutters">
                     <div class="col-12 col-lg-6">
                         <img src="https://dummyimage.com/400x400" alt="">
                     </div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 py-3 pl-5">
                         <h2>BRAND NAME</h2>
                         <h1>The Catcher in the Rye</h1>
-                        <div class="row p-0">
-                            <div class="col-6">
+                        <div class="review p-0 no-gutters mb-3">
+                            <div class="d-flex justify-content-start align-items-center">
+                                <svg class="star" fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" class="w-4 h-4 text-indigo-500"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
+                                    </path>
+                                </svg>
+                                <svg class="star" fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" class="w-4 h-4 text-indigo-500"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
+                                    </path>
+                                </svg>
+                                <svg class="star" fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" class="w-4 h-4 text-indigo-500"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
+                                    </path>
+                                </svg>
+                                <svg class="star" fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" class="w-4 h-4 text-indigo-500"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
+                                    </path>
+                                </svg>
+                                <svg class="star" fill="none" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" stroke-width="2" class="w-4 h-4 text-indigo-500"
+                                    viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z">
+                                    </path>
+                                </svg>
+
                                 <span>4 Reviews</span>
+
+                                <a href="">
+                                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2" class="facebook w-5 h-5" viewBox="0 0 24 24">
+                                        <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                                    </svg>
+                                </a>
+                                <a href="">
+                                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                                        <path
+                                            d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                                        </path>
+                                    </svg>
+                                </a>
+                                <a href="">
+                                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                                        <path
+                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                        </path>
+                                    </svg>
+                                </a>
                             </div>
-                            <div class="col-6">
-                                <a href=""></a>
-                                <a href=""></a>
-                                <a href=""></a>
-                            </div>
+
 
                         </div>
                         <p>Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia
                             microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn.
                             Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over,
                             neutra jean shorts keytar banjo tattooed umami cardigan.</p>
-                        <div class="row p-0">
+                        <div class="p-0 d-flex flex-row align-items-center">
                             <div class="color">
-                                <span>Color</span>
-                                <button
-                                    class="border-2 border-gray-300 rounded-full w-6 h-6 focus:outline-none"></button>
-                                <button></button>
-                                <button></button>
+                                <span class="mr-1">Color</span>
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-secondary active white rounded-circle">
+                                      <input type="radio" name="options" id="option1" autocomplete="off" checked>
+                                    </label>
+                                    <label class="btn btn-secondary black rounded-circle">
+                                      <input type="radio" name="options" id="option2" autocomplete="off">
+                                    </label>
+                                    <label class="btn btn-secondary blue rounded-circle">
+                                      <input type="radio" name="options" id="option3" autocomplete="off">
+                                    </label>
+                                  </div>
+                               
                             </div>
-                            <div class="size">
-                                <span>Size</span>
+                            <div class="size d-flex flex-row align-items-center">
+                                <span class="ml-3">Size</span>
                                 <div class="size-select">
-                                    <select class="">
+                                    <select class="ml-3 rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10" style="width: 80px;height: 42px;">
                                         <option>SM</option>
                                         <option>M</option>
                                         <option>L</option>
@@ -782,13 +919,22 @@
                             </div>
                         </div>
 
-                        <div class="price">
-                            <span></span>
-                            <button></button>
-                            <!-- <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                            <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z">
-                            </path>
-                          </svg> -->
+                        <hr>
+
+                        <div class="price d-flex align-items-center justify-content-between">
+                            <span>$58.00</span>
+
+                            <div class="btn-group d-flex align-items-center">                           
+                                 <div class="button d-flex justify-content-center rounded"> <button type="button"
+                                class="btn btn-primary mt-0" style="width: 100px;height: 40px;">Button</button>
+                                </div>
+
+                            <button class="rounded-circle ml-3" style="width:40px; height:40px;"><svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24" style="width:20px; height:20px;">
+                                <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z">
+                                </path>
+                              </svg></button></div>
+
+
                         </div>
                     </div>
                 </div>
